# Fudge-C

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.msvc  NEWS  README  README.msvc  TODO  build.properties  build.xml  configure.ac  message.c  message.h  platform.c  platform.h  reconf  reference.c  reference.h  status.c  test.c  types.c  types.h
config/: .gitignore
examples/: .gitignore  Makefile  prettyprint.c  simple.c  usertypes.c
include/: .gitignore  Makefile.am
include/fudge/: Makefile.am  codec.h  codec_ex.h  codec_field.h  config.msvc  datetime.h  envelope.h  fudge.h  fudgeapi.h  header.h  memory.h  message.h  message_ex.h  platform.h  reference.h  registry.h  status.h  string.h  stringpool.h  types.h
m4/: COPYING  ax_cflags_warn_all.m4  ax_check_compiler_flags.m4  fm_check_for_sync_fetch.m4  fm_test_sizeof.m4
rpm/: fudge-c.spec
scripts/: git2changelog.py
src/: Makefile.am  Makefile.msvc  atomic.h  codec.c  codec_decode.c  codec_decode.h  codec_encode.c  codec_encode.h  coerce.c  coerce.h  convertutf.c  convertutf.h  datetime.c  envelope.c  fudge.c  header.c  header.h  memory.c  memory_internal.h  message.c  message_ex.c  message_internal.h  platform.c  prefix.c  prefix.h  pstdint.h  reference.c  reference.h  reference_atomic.c  reference_atomic_gcc.c  reference_default.c  reference_msvc.c  reference_pthreads.c  registry.c  registry.h  registry_internal.h  status.c  strdup.c  strdup.h  string.c  (+3 more)
tests/: .gitignore  Makefile.am  Makefile.msvc  ansi_compat.h  simpletest.c  simpletest.h  snprintf.h  test.c  test_codec.c  test_datetime.c  test_message.c  test_string.c  test_user_types.c  test_utilities.c
tests/test_data/: fudge_msg_output.fudge
